# Compilation-Bot

./: .gitignore  README.md  pyproject.toml  render.yaml  supabasePass.txt
.github/workflows/: render-keepalive.yml
app/: config.py  dashboard.py  main.py  web.py
app/analyzer/: base.py  mechanic_dictionary.py  mechanic_labels.py  normalize.py  rule_analyzer.py
app/collector/: base.py  indiedb.py  itch.py  page_enricher.py  reddit.py  rss.py  rss_parser.py  scheduler.py  steam.py  steam_search.py  youtube.py
app/db/: models.py  session.py
app/dedup/: canonical.py  fingerprints.py
app/notifier/: formatter.py  telegram_bot.py  telegram_runtime.py
app/pipeline/: jobs.py
app/scorer/: base.py  embeddings.py  rule_scorer.py
app/storage/: repositories.py
tests/: test_analyzer.py  test_canonical.py  test_normalize.py  test_page_enricher.py  test_rss_parser.py  test_scorer.py
