[project]
name = "game-mech-monitor-bot"
version = "0.1.0"
description = "Telegram bot for monitoring game mechanics references."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.8.0",
  "aiohttp>=3.9.0",
  "apscheduler>=3.10.4",
  "httpx>=0.27.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.3.4",
  "sqlalchemy>=2.0.32",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "ruff>=0.6.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
